--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.0",
+    "react-router-scroll-memory": "^2.0.7",
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.3",
